objects/Cvent_Asset_Type__c.object
<CustomObject>
    <fields>
        <fullName>Average_Price_Per_Event__c</fullName>
        <label>Average Price Per Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_All__c</fullName>
        <label>Count All</label>
        <summaryForeignKey>Cvent_Asset__c.Cvent_Asset_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Available__c</fullName>
        <label>Count - Available</label>
        <summaryFilterItems>
            <field>Cvent_Asset__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryForeignKey>Cvent_Asset__c.Cvent_Asset_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Out_of_Order__c</fullName>
        <label>Count - Out of Order</label>
        <summaryFilterItems>
            <field>Cvent_Asset__c.Status__c</field>
            <operation>contains</operation>
            <value>Out</value>
        </summaryFilterItems>
        <summaryForeignKey>Cvent_Asset__c.Cvent_Asset_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>In search screens the results will be ordered in ascending order of this number. If the numbers are the same, alphabetical sort will be used.</inlineHelpText>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unique Asset</fullName>
                </value>
                <value>
                    <fullName>Non-Unique Asset</fullName>
                </value>
                <value>
                    <fullName>Consumable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cvent Asset Type</label>
    <nameField>
        <label>Cvent Asset Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cvent Asset Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>